--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "firebase": "^10.9.0",
-    "preact": "^10.19.6"
+    "framer-motion": "^11.0.15",
+    "preact": "^10.19.6",
+    "react-icons": "^5.0.1",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.1",
