--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.9.0",
     "framer-motion": "^11.0.15",
     "preact": "^10.19.6",
+    "prompt-sync": "^4.2.0",
     "react-icons": "^5.0.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3"
